# dashie-reddit-digest

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  supabase_schema.sql
.github/workflows/: digest.yml
src/reddit_digest/: __init__.py  __main__.py  config.py  dedup.py  digest.py  mailer.py  prefilter.py  reddit_client.py  scorer.py
tests/: test_dedup.py  test_prefilter.py  test_scorer.py
